RESOLVED FIXED218414
AX: Provide build workaround while isSystemVoice is not in all SDKs
https://bugs.webkit.org/show_bug.cgi?id=218414
Summary AX: Provide build workaround while isSystemVoice is not in all SDKs
chris fleizach
Reported 2020-10-31 08:18:44 PDT
Provide a compile time workaround while isSystemVoice is not available in all SDKs
Attachments
patch (2.93 KB, patch)
2020-10-31 08:19 PDT, chris fleizach
no flags
patch (2.93 KB, patch)
2020-10-31 08:20 PDT, chris fleizach
thorton: review+
patch (3.05 KB, patch)
2020-11-01 01:40 PST, chris fleizach
no flags
Radar WebKit Bug Importer
Comment 1 2020-10-31 08:19:04 PDT
chris fleizach
Comment 2 2020-10-31 08:19:48 PDT
chris fleizach
Comment 3 2020-10-31 08:20:51 PDT
chris fleizach
Comment 4 2020-11-01 01:40:36 PST
EWS
Comment 5 2020-11-01 08:42:04 PST
Committed r269232: <https://trac.webkit.org/changeset/269232> All reviewed patches have been landed. Closing bug and clearing flags on attachment 412861 [details].
Note You need to log in before you can comment on or make changes to this bug.