AX: Provide build workaround while isSystemVoice is not in all SDKs https://bugs.webkit.org/show_bug.cgi?id=218414

Reviewed by Tim Horton.

Source/WebCore:

* platform/ios/PlatformSpeechSynthesizerIOS.mm:
(WebCore::PlatformSpeechSynthesizer::initializeVoiceList):

Source/WebCore/PAL:

* pal/spi/cocoa/AXSpeechManagerSPI.h:


Canonical link: https://commits.webkit.org/231091@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269232 268f45cc-cd09-0410-ab3c-d52691b4dbfc