Source/WebCore/PAL/pal/spi/cocoa/AXSpeechManagerSPI.h
@@ -27,7 +27,8 @@
 
 #if PLATFORM(IOS_FAMILY)
 
-#if USE(APPLE_INTERNAL_SDK)
+// FIXME: Undo when isSystemVoice is available in all SDKs.
+#if USE(APPLE_INTERNAL_SDK) && 0
 
 #include <AXSpeechManager.h>
 
@@ -35,7 +36,7 @@
 
 #include <AVFoundation/AVFoundation.h>
 
-@interface AVSpeechSynthesizer (PrivateAttributes)
+@interface AVSpeechSynthesisVoice (PrivateAttributes)
 @property (nonatomic, readonly) BOOL isSystemVoice SPI_AVAILABLE(macos(11.3), ios(13.3), tvos(13.3), watchos(6.3));
 @end
 
